--- a/Derivanator-main/index.html
+++ b/Derivanator-main/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=Derivanator-main/index.html">
+    <meta http-equiv="refresh" content="0; url=index.html">
     <title>Redirigiendo...</title>
 </head>
 <body>
