Agregado footer con créditos y estilos mejorados

--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
         </div>
     </main>
 
+    <!-- Footer -->
+    <footer>
+        <p>By: Vanesa Solis, Nagive Gongora y Trinidad Perera, 2B</p>
+    </footer>
+
     <!-- Scripts -->
     <script src="script.js"></script>
 </body>
