--- a/aprender.html
+++ b/aprender.html
@@ -154,6 +154,11 @@
         </section>
     </main>
 
+    <!-- Footer -->
+    <footer>
+        <p>By: Vanesa Solis, Nagive Gongora y Trinidad Perera, 2B</p>
+    </footer>
+
     <!-- Scripts -->
     <script src="script.js"></script>
 </body>
