--- a/extras.html
+++ b/extras.html
@@ -100,6 +100,11 @@
         </section>
     </main>
 
+    <!-- Footer -->
+    <footer>
+        <p>By: Vanesa Solis, Nagive Gongora y Trinidad Perera, 2B</p>
+    </footer>
+
     <!-- Scripts -->
     <script src="script.js"></script>
 </body>
